[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/objects/GameGun.gd" type="Script" id=1]
[ext_resource path="res://src/helpers/PlayerDetectionZone.tscn" type="PackedScene" id=2]

[node name="GameGun" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]

[node name="BulletSpawnPoint" type="Position2D" parent="."]

[node name="Cooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
